<resources>
    <string name="app_name">IniFileControllerTest</string>

    <string name="load_sample">Load Sample</string>
    <string name="write_sample">Write Sample</string>

    <string name="load">Load</string>

    <string name="section">section</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="comment">comment</string>

    <string name="add">Add</string>
    <string name="write">Write</string>
</resources>
