<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kei.inifilecontrollertest.WriteSampleActivity">

    <EditText
        android:id="@+id/txt_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/section"/>

    <LinearLayout
        android:id="@+id/key_and_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_section"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/txt_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/key"/>

        <EditText
            android:id="@+id/txt_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/value"/>
    </LinearLayout>

    <EditText
        android:id="@+id/txt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/key_and_value"
        android:hint="@string/comment"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_comment"
        android:text="@string/add"/>

    <Button
        android:id="@+id/btn_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add"
        android:text="@string/write"/>

    <TextView
        android:id="@+id/txt_datas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_write"/>
</RelativeLayout>
